# steeldb

./: .gitignore  Cargo.toml  README.md
.cargo/: config
git-hooks/: pre-commit.sh
src/: database.rs  lib.rs  main.rs  repl.rs
src/database/: command.rs  config.rs  console_printer.rs  datatypes.rs  file_io.rs  in_memory_table.rs  logger.rs  parser.rs  steeldb.rs  table.rs  table_impl.rs  table_registry.rs  tests.rs  virtual_machine.rs
steeldb-client/: Cargo.toml
steeldb-core/: Cargo.toml
steeldb-core/src/: console_printer.rs  datatypes.rs  json_result.rs  lib.rs  repl.rs  steeldb_interface.rs  table.rs
steeldb-parser/: Cargo.toml  README.md
steeldb-parser/src/: lib.rs  select.lalrpop
steeldb-server/: Cargo.toml
steeldb-server/src/: main.rs
