[package]
name = "steeldb"
version = "0.1.5"
edition = "2021"
description = "A simple database built from scratch in Rust"
license = "Apache-2.0"
repository = "https://github.com/paolorechia/steeldb"
authors = ["Paolo Rechia"]

[dependencies]
log = "0.4.20"
env_logger = { version = "0.10.1", features = ["color"] }
steeldb-parser = { path = "steeldb-parser" }
steeldb-core = { path = "steeldb-core" }