[package]
name = "steeldb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"],  optional = true}
tokio = { version = "1", features = ["full"],  optional = true}
http-body-util = {version = "0.1",  optional = true}
hyper-util = { version = "0.1", features = ["full"], optional = true}
