[package]
name = "steeldb-parser"
version = "0.1.1"
edition = "2021"
description = "SQL parser for SteelDB"
license = "Apache-2.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer", "unicode"] }
