[package]
name = "steeldb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"]}
tokio = { version = "1", features = ["full"]}
http-body-util = {version = "0.1"}
hyper-util = { version = "0.1", features = ["full"]}
steeldb-core = { path = "../steeldb-core", features = ["json"]}
steeldb = { path = ".."}
serde_json = "1.0.111"
