[package]
name = "steeldb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steeldb-core = { path = "../steeldb-core", features = ["json"]}
steeldb = { path = ".."}
serde_json = "1.0.111"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
